--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework-16</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header class="site-head container">
+          <div class="site-head__nav">
+            <div class="site-head__logo">
+                <img class="site-head__img" src="images/Group 5.png" alt="">
+            </div>
+            <div class="site-head__link">
+                <span><i class="fa-solid fa-bars"></i></span>
+                <ul class="site-head__list">
+                    <li><a class="site-head__item" href="#">HOME</a></li>
+                    <li><a class="site-head__item" href="#">ABOUT US</a></li>
+                    <li><a class="site-head__item" href="#">Create your plan</a></li>
+                </ul>
+            </div>
+          </div>
+    </header>
 </body>
 </html>
