--- a/index.html
+++ b/index.html
@@ -17,12 +17,42 @@
             <div class="site-head__link">
                 <span><i class="fa-solid fa-bars"></i></span>
                 <ul class="site-head__list">
-                    <li><a class="site-head__item" href="#">HOME</a></li>
-                    <li><a class="site-head__item" href="#">ABOUT US</a></li>
-                    <li><a class="site-head__item" href="#">Create your plan</a></li>
+                    <li class="site-head__li"><a class="site-head__item" href="#">HOME</a></li>
+                    <li class="site-head__li"><a class="site-head__item" href="#">ABOUT US</a></li>
+                    <li class="site-head__li"><a class="site-head__item" href="#">Create your plan</a></li>
                 </ul>
             </div>
           </div>
+          <div class="site-head__bg">
+            <h1 class="site-head__sub">Great coffee
+                made simple.</h1>
+                <p class="site-head__text">Start your mornings with the world’s best coffees. Try our expertly curated artisan 
+                    coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                    <a class="site-head__btn" href="#">Create your plan</a>
+          </div>
     </header>
+    <main class="main container">
+        <h2 class="free">Our Collection</h2>
+        <div class="main__content">
+            <img src="images/kopi4.png" alt="">
+            <h1>Gran Espresso</h1>
+            <p>Light and flavorful blend with cocoa and black pepper for an intense experience</p>
+        </div>
+        <div class="main__content">
+            <img src="images/kopi4.png" alt="">
+            <h1>Planalto</h1>
+            <p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts</p>
+        </div>
+        <div class="main__content">
+            <img src="images/kopi3.png" alt="">
+            <h1>Piccollo</h1>
+            <p>Mild and smooth blend featuring notes of toasted almond and dried cherry </p>
+        </div>
+        <div class="main__content">
+            <img src="images/kopi3.png" alt="">
+            <h1>Danche</h1>
+            <p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p>
+        </div>
+    </main>
 </body>
 </html>
