--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
             <h1>Danche</h1>
             <p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p>
         </div>
+        <div class="main__foot">
+            <h1 class="main-foot__sub">Why choose us?</h1>
+                <p>A large part of our role is choosing which particular coffees will be featured  in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
+        </div>
+        <div class="main__footer container">
+            <div class="main__card">
+                <img src="images/Shape.png" alt="">
+                <h1>Best quality</h1>
+                <p>Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+            </div>
+            <div class="main__card">
+                <img src="images/Combined Shape.png" alt="">
+                <h1>Exclusive benefits</h1>
+                <p>Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+            </div>
+            <div class="main__card">
+                <img src="images/Combined Shape (1).png" alt="">
+                <h1>Free shipping</h1>
+                <p>We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+            </div>
+        </div>
+        <h2 class="free">How it works</h2>
     </main>
+
 </body>
 </html>
