--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@
         </div>
         <h2 class="free">How it works</h2>
     </main>
-
+    <footer class="foot">
+        <div class="main__content">
+            <img class="imgage" src="images/01.png" alt="">
+            <h1>Pick your coffee</h1>
+            <p>Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+        </div>
+        <div class="main__content">
+            <img class="imgage" src="images/02.png" alt="">
+            <h1>Choose the frequency</h1>
+            <p>Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+        </div>
+        <div class="main__content">
+            <img class="imgage" src="images/03.png" alt="">
+            <h1>Receive and enjoy!</h1>
+            <p>We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning 
+                world-class coffees curated to provide a distinct tasting experience.</p>
+        </div>
+        <a class="site-head__btn" href="#">Create your plan</a>
+    </footer>
+    <footer class="footer">
+        <img src="images/Group 5.svg" alt="">
+        <a href="#">Home</a>
+        <a href="#">About us</a>
+        <a href="#">Create your plan</a>
+        <div class="site">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
+    </footer>
 </body>
 </html>
