--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
                 <p>We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning 
                     world-class coffees curated to provide a distinct tasting experience.</p>
             </div>
+            <a class="site-head__btn1" href="#">Create your plan</a>
         </footer>
-         <a class="site-head__btn" href="#">Create your plan</a>
+         
     </section>
     
    
