--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
             </div>
           </div>
           <div class="site-head__bg">
-            <h1 class="site-head__sub">Great coffee
-                made simple.</h1>
-                <p class="site-head__text">Start your mornings with the world’s best coffees. Try our expertly curated artisan 
-                    coffees from our best roasters delivered directly to your door, at your schedule.</p>
+            <div class="site-head__main">
+                <h1 class="site-head__sub">Great coffee
+                    made simple.</h1>
+                    <p class="site-head__text">Start your mornings with the world’s best coffees. Try our expertly curated artisan 
+                        coffees from our best roasters delivered directly to your door, at your schedule.</p>
                     <a class="site-head__btn1" href="#">Create your plan</a>
+            </div>
           </div>
     </header>
     <main class="main container">
@@ -60,7 +62,7 @@
             <h1 class="main-foot__sub">Why choose us?</h1>
                 <p>A large part of our role is choosing which particular coffees will be featured  in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
         </div>
-        <div class="main__footer container">
+        <div class="main__footer">
             <div class="main__card">
                 <img src="images/Shape.png" alt="">
                 <h1>Best quality</h1>
@@ -100,8 +102,12 @@
                 <p>We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning 
                     world-class coffees curated to provide a distinct tasting experience.</p>
             </div>
+            <div class="btn5">
+                <a class="site-head__btn2" href="#">Create your plan</a>
+            </div>
         </footer>
-        <a class="site-head__btn1" href="#">Create your plan</a>
+      
+        
     </section>
     <footer class="footer">
         <div class="">
